# loco-physx

./: .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
include/: loco_common_physx.h  loco_simulation_physx.h
include/primitives/: loco_single_body_adapter_physx.h  loco_single_body_collider_adapter_physx.h
scripts/: setup_dependencies.sh
src/: loco_common_physx.cpp  loco_simulation_physx.cpp
src/primitives/: loco_single_body_adapter_physx.cpp  loco_single_body_collider_adapter_physx.cpp
tests/: CMakeLists.txt
tests/cpp/generic/: CMakeLists.txt  test_runtime_physx_backend.cpp
tests/cpp/physx/: CMakeLists.txt  test_simulation_physx.cpp
